--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.header_top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+}
+.header_bottom {
+  display: flex;
+  width: 100%;
+  padding: 15px 0px;
+  justify-content: space-between;
+}
+.search {
+  width: 60%;
+}
+.pagination {
+  display: flex;
+  flex-direction: row;
+}
+.title {
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.button_group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button[class*=" awsui_variant-primary_"] {
+  background-color: #ec7211 !important;
+  border-color: #ec7211 !important;
+}
+
+a[class*=" awsui_link-active"] {
+  color: #ec7211 !important;
+}
+
+.naviagtion {
+  padding: 20px;
+  border-bottom: 1px solid #cfcfcf;
 }
